Fix scrolling behaviour on mobile

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -42,5 +42,9 @@ a {
 
 li {
   display: inline;
-  
+
+}
+
+#typed {
+  white-space: normal !important;
 }
