--- a/_sass/_json.scss
+++ b/_sass/_json.scss
@@ -1,5 +1,6 @@
 .json {
   white-space: nowrap;
+  overflow: hidden;
 
   &:before {
     content: "{";
